// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoveEffect Component should match snapshot with English description 1`] = `
<DocumentFragment>
  <div
    class="effect flex flex-col max-h-50 w-full"
  >
    <h3
      class="w-fit text-lg mb-4"
    >
      moves.moveEffect.title
    </h3>
    <div
      class="flex-1 py-1 h-[-webkit-fill-available] overflow-auto"
    >
      <p>
        A new effect
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MoveEffect Component should match snapshot with no valid description 1`] = `
<DocumentFragment>
  <div
    class="effect flex flex-col max-h-50 w-full"
  >
    <h3
      class="w-fit text-lg mb-4"
    >
      moves.moveEffect.title
    </h3>
    <div
      class="flex-1 py-1 h-[-webkit-fill-available] overflow-auto"
    >
      <p>
        moves.moveEffect.empty
      </p>
    </div>
  </div>
</DocumentFragment>
`;
